[gd_scene load_steps=2 format=3 uid="uid://df3lgn7jx534o"]

[ext_resource type="Script" uid="uid://c55t4usu4d606" path="res://Player/Health/Scripts/health_scene.gd" id="1_mhrff"]

[node name="HeartScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_mhrff")
metadata/_edit_use_anchors_ = true

[node name="Row_1" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 248.0
offset_bottom = 43.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Row_1"]
layout_mode = 2

[node name="Row_2" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 248.0
offset_bottom = 93.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Row_2"]
layout_mode = 2

[node name="Row_3" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 248.0
offset_bottom = 143.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Row_3"]
layout_mode = 2
